# pybaselines

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CITATION.cff  LICENSE.txt  LICENSES_bundled.txt  LICENSES_other.txt  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: publish_release.yml  python-test-latest.yml  python-test.yml
docs/: Makefile  authors.rst  citing.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  license.rst  make.bat  modify_module_docstring.py  parameter_selection.rst  performance.rst  quickstart.rst  usage.rst  viewcode_inherit_methods.py  xref_param_dict.py
docs/_templates/autoapi/: LICENSE.rst  index.rst
docs/_templates/autoapi/python/: module.rst  package.rst
docs/_templates/autosummary/: class.rst  method.rst  module.rst
docs/algorithms/: classification.rst  index.rst  manual.rst  misc.rst  morphological.rst  optimizers.rst  polynomial.rst  smooth.rst  spline.rst  splines.rst  whittaker.rst  window.rst
docs/algorithms/algorithms_1d/: index.rst  misc.rst  morphological.rst  optimizers.rst  polynomial.rst  smooth.rst  spline.rst  whittaker.rst
docs/algorithms/algorithms_2d/: index.rst  morphological_2d.rst  optimizers_2d.rst  polynomial_2d.rst  smooth_2d.rst  spline_2d.rst  whittaker_2d.rst
docs/algorithms_2d/: index.rst  morphological_2d.rst  optimizers_2d.rst  polynomial_2d.rst  smooth_2d.rst  spline_2d.rst  whittaker_2d.rst
docs/api/: Baseline.rst  Baseline2D.rst  functional_interface.rst  index.rst  results.rst  utils.rst
docs/examples/: README.rst
docs/examples/classification/: README.rst  plot_classifier_masks.py  plot_fastchrom_threshold.py
docs/examples/general/: README.rst  plot_algorithm_convergence.py  plot_masked_data.py  plot_noisy_data.py  plot_padding.py  plot_padding_extrapolate.py  plot_reuse_Baseline.py  plot_sorted_data.py  plot_warm_start.py
docs/examples/interactive/: README.rst  plot_interactive_hw.py  plot_interactive_lam.py  plot_interactive_poly.py
docs/examples/misc/: README.rst  plot_beads_preprocessing.py
docs/examples/morphological/: README.rst  plot_half_window_effects.py
docs/examples/optimizers/: plot_custom_bc_1_whittaker.py
docs/examples/spline/: example_helpers.py  plot_lam_vs_num_knots.py  plot_pspline_whittaker.py
docs/examples/two_d/: plot_along_axes_1d_baseline.py  plot_whittaker_2d_dof.py
docs/examples/whittaker/: README.rst  example_helpers.py  plot_lam_effects.py  plot_lam_vs_data_size.py  plot_whittaker_solvers.py
examples/: README.rst  plot_baselines.py
examples/classification/: README.rst  plot_classifier_interpolation.py  plot_classifier_masks.py  plot_fastchrom_threshold.py
examples/general/: plot_algorithm_convergence.py  plot_noisy_data.py  plot_padding.py  plot_padding_extrapolate.py
examples/misc/: plot_beads_preprocessing.py
examples/morphological/: README.rst  plot_half_window_effects.py
examples/optimizers/: README.rst  plot_custom_bc_1_whittaker.py
examples/spline/: README.rst  example_helpers.py  plot_lam_vs_num_knots.py  plot_pspline_whittaker.py
examples/two_d/: README.rst  plot_whittaker_2d_dof.py
examples/whittaker/: README.rst  example_helpers.py  plot_lam_effects.py  plot_lam_vs_data_size.py  plot_whittaker_solvers.py
pybaselines/: __init__.py  _algorithm_setup.py  _banded_solvers.py  _banded_utils.py  _compat.py  _spline_utils.py  _validation.py  _weighting.py  api.py  baselines.py  classification.py  config.py  manual.py  misc.py  morphological.py  optimizers.py  penalized_least_squares.py  polynomial.py  results.py  smooth.py  spline.py  splines.py  utils.py  whittaker.py  window.py
pybaselines/two_d/: __init__.py  _algorithm_setup.py  _spline_utils.py  _validation.py  _whittaker_utils.py  api.py  classification.py  morphological.py  optimizers.py  polynomial.py  smooth.py  spline.py  whittaker.py
requirements/: README.rst  requirements-ci-optional.txt  requirements-ci.txt  requirements-development.txt  requirements-documentation.txt  requirements.txt
tests/: __init__.py  base_tests.py  conftest.py  data.py  test_algorithm_setup.py  test_api.py  test_banded_solvers.py  test_banded_utils.py  test_classification.py  test_compat.py  test_manual.py  test_meta.py  test_misc.py  test_morphological.py  test_optimizers.py  test_polynomial.py  test_results.py  test_smooth.py  test_spline.py  test_spline_utils.py  test_splines.py  test_utils.py  test_validation.py  test_weighting.py  test_whittaker.py  test_window.py
tests/two_d/: test_algorithm_setup.py  test_api.py  test_morphological.py  test_optimizers.py  test_polynomial.py  test_smooth.py  test_spline.py  test_spline_utils.py  test_whittaker.py  test_whittaker_utils.py
tools/: logo_plot.py  plots_for_docs.py  quickstart_plot.py
