[metadata]
name = pybaselines
version = 0.3.0
author = Donald Erb
author_email = donnie.erb@gmail.com
description = A collection of algorithms for estimating the baseline of experimental data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files =
    LICENSE.txt
    LICENSES_bundled.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
keywords =
    materials characterization
    materials science
    baseline
    background
    baseline subtraction
    background subtraction
url = https://github.com/derb12/pybaselines
project_urls =
    Source Code = https://github.com/derb12/pybaselines
    Documentation = https://pybaselines.readthedocs.io

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy>=1.9
    scipy
setup_requires =
    setuptools>=42
    wheel
zip_safe = False

[options.packages.find]
include = pybaselines, pybaselines.*

[flake8]
max-line-length = 100
docstring-convention = numpy
exclude =
    docs/*
    tests/*
ignore =
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    D401  # first line should be in imperative mood; try rephrasing
per-file-ignores =
    # F401: module imported but unused
    # D205: 1 blank line required between summary line and description
    __init__.py: F401, D205
