[metadata]
name = pybaselines
version = 0.4.1
author = Donald Erb
author_email = donnie.erb@gmail.com
description = A library of baseline correction algorithms to help estimate the baselines of experimental data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files =
    LICENSE.txt
    LICENSES_bundled.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
keywords =
    materials characterization
    materials science
    baseline
    background
    baseline correction
    baseline subtraction
url = https://github.com/derb12/pybaselines
project_urls =
    Source Code = https://github.com/derb12/pybaselines
    Documentation = https://pybaselines.readthedocs.io

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy>=1.14
    scipy>=0.11
zip_safe = False

[options.extras_require]
full = 
    pentapy>=1.0

[options.packages.find]
include = pybaselines, pybaselines.*

[flake8]
max-line-length = 100
docstring-convention = numpy
exclude =
    docs/*
ignore =
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    D401  # first line should be in imperative mood; try rephrasing
per-file-ignores =
    # F401: module imported but unused
    # D205: 1 blank line required between summary line and description
    __init__.py: F401, D205
